third paragraph of section 2

--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -248,9 +248,9 @@ This paper rigorously examines the perception of association between two time se
 
 \section{The lineup protocol for comparing plot designs}
 
-It has long been thought that EDA and statistical inference were worlds apart, but this is no longer true. \citet{Buja} and \citet{Majumder:2013} bridges the chasm. Framing a data plot as a test statistic, which when compared to plots of null data, places EDA into the statistical inference recipe. Underlying any data plot, there is an implicit null hypothesis that there is ``no pattern''. Particular types of plots may regulate what no  pattern means. For example, a scatter plot is used to explore for association between the two variables, so the implicit null hypothesis is that there is no association between the two variables. The alternative hypothesis is that there is some association, although it is not required to specify precisely the type of association. The departure from the null might be a single outlier, or few outliers, a non-linear trend, or clusters. To test the null hypothesis the data plot is placed in a lineup with plots of null data, data generated from a scenario of no pattern. An impartial viewer is asked to select the plot that is the most different from the others. If they select the data plot as the most different, this counts as a rejection of the null hypothesis, and follow-up questions may determine the type of departure: clusters, outlier, nonlinearity in the case of a scatterplot. With multiple independent observers a $p$-value can be calculated to measure the statistical significance of the departure from the null. This process is called the ``lineup protocol''. 
+It has long been thought that EDA and statistical inference were worlds apart, but this is no longer true. \citet{Buja} and \citet{Majumder:2013} bridges the chasm. Framing a data plot as a test statistic, which when compared to plots of null data, places EDA into the statistical inference recipe. Underlying any data plot, there is an implicit null hypothesis that there is ``no pattern''. Particular types of plots may regulate what no  pattern means. For example, a scatter plot is used to explore for association between the two variables, so the implicit null hypothesis is that there is no association between the two variables. The alternative hypothesis is that there is some association, although it is not required to specify precisely the type of association. The departure from the null might be a single outlier, or few outliers, a non-linear trend, or clusters. To test the null hypothesis the data plot is placed in a lineup with plots of null data, data generated from a scenario of no pattern. For the scatterplot this can be achieved by permuting the values on one of the variables to break any association between the two variables. An impartial viewer is asked to select the plot that is the most different from the others. If they select the data plot as the most different, this counts as a rejection of the null hypothesis, and follow-up questions on why they made their choice may determine the type of departure from the null. With multiple independent observers a $p$-value can be calculated to measure the statistical significance of the departure from the null. This process is called the ``lineup protocol''. 
 
-The lineup protocol equips exploratory visual methods with a rigorous procedure that enables statistical inference. This is important because visualization remains essential for data analysis because human eyes can detect patterns which would not be detected mathematically. The lineup protocol provides the calibration of the human eyes to prevent us from erroneously jumping to conclusions about magic patterns. Prior to the protocol description, we can find preliminary ideas along these lines, for example \citet{Daniel} recommends looking at plots of data from a null distribution for exploring two factor design experimental data.  His paper provides 40 pages of plots from the null! He encourages data analysts to understand the patterns that might be seen in samples data drawn from populations without inherent structure. (\citet{Buja} has named this the Rorschach protocol.)
+The lineup protocol equips exploratory visual methods with a rigorous procedure that enables statistical inference. This is important because visualization remains essential for data analysis because human eyes can detect patterns which would not be detected mathematically. The lineup protocol provides the calibration of the human eyes to prevent us from erroneously jumping to conclusions about magic patterns. Prior to the protocol description, we can find preliminary ideas along these lines, for example \citet{Daniel} recommends looking at plots of data from a null distribution for exploring two factor design experimental data.  His paper provides 40 pages of plots from the null! He encourages data analysts to understand the patterns that might be seen in samples data drawn from populations without inherent structure. (\citep{Buja} has named this the Rorschach protocol.)
 
 %which the human eye detects as more different in this data plot than in any of the nulls.
 %The plot of the data is placed in a lineup of plots of null data, data generated assuming that the null hypothesis is true. If an impartial observer asked to select the plot that is most different from the rest, does select the data plot this suggests there exists a pattern that is not the result of chance, and the null hypothesis is rejected. 
@@ -265,16 +265,19 @@ The lineup protocol equips exploratory visual methods with a rigorous procedure 
 
 % First the p-value calculation for a lineup, multiple observers
 
-The lineup protocol specifies that the data plot be placed in a random location in a field of $(m-1)$ null plots. Let $p_{i}$ be the probability that plot $i$ is chosen from the lineup. It depends on the plot design, $d$, and the signal strength, $q_{i}$, of the structure displayed in plot relative to the other plots in the lineup. This can be defined as a function $f_{i,d} (q_{1},\dots,q_{20})$\citep{Hofmann:2014}. If the data plot is detected, it indicates that the plot design could convey the desired information about the underlying structure and that the data plot has a higher signal strength than the null plots. The plot design that has a human observer selecting the data plot the most often will thus minimise both Type I error and Type II error in the hypothesis testing.
+The lineup protocol specifies that the data plot be placed in a randomly selected location in a field of $(m-1)$ null plots. 
 
-However, there is the possibility that the true plot was selected by chance, that we have committed a Type I error in the lineup test. For a lineup of $m$ plots, the probability of selecting any plot when they are all generated by the null distribution is $1/m$, setting the Type I error rate, $\alpha$, of a lineup hypothesis test to equal $1/m$. 
-To control our error rate, we could increase change $m$, this could produce a large cognitive burden on one observer, having to sort through many plots. An alternative approach is to recruit more observers, $K$, to evaluate a lineups, then the probability that plot $i$ is selected by $x$ observers under the null hypothesis follows a binomial distribution \citep{Majumder:2013}:
+Let $p_{i}$ be the probability that plot $i$ is chosen from the lineup. The choice will depend on the plot design, $d$, and the signal strength, $q_{i}$, of the structure displayed in plot relative to the other plots in the lineup. This can be defined as a function $f_{i,d} (q_{1},\dots,q_{20})$\citep{Hofmann:2014}. If the data plot is detected, it indicates that the plot design could convey the desired information about the underlying structure and that the data plot has a higher signal strength than the null plots. 
+
+If the data plot has no pattern, that is, the null hypothesis is true, there is a chance of making a Type I error. For a lineup of $m$ plots, the probability of selecting any plot is $1/m$, setting the Type I error rate, $\alpha$, of the hypothesis test to equal $1/m$.  To control our error rate, we could increase change $m$, this could produce a large cognitive burden on one observer, having to sort through many plots. An alternative approach is to recruit more observers, $K$, to evaluate a lineups, then the probability that plot $i$ is selected by $x$ observers under the null hypothesis follows a binomial distribution \citep{Majumder:2013}:
 
 \begin{equation}
 \label{pvalue}
   \centering
   p-value = P(X \geq x | H_{0}) = 1 - B_{n, 1/m}(x-1)
 \end{equation}
+
+The plot design that has a human observer selecting the data plot the most often will thus minimise both Type I error and Type II error in the hypothesis testing.
 
 If all $K$ observers select the same plot out of a lineup of twenty, we result in a p-value as small as $1/m^K$ . We used $m= 20$, giving us a significance level (and Type 1 error rate) of $\alpha = 0.05$. The plot of 'true' data is placed randomly amongst 19 null plots to form the lineup.
 
